@@ -10,9 +10,13 @@
 #                   'LDAP_RESULT_EMAIL',
 #                   'LDAP_RESULT_REALNAME',
 #                   'LDAP_RESULT_COMMENT',
-#                   IGNORANT],
+#                   'IGNORANT' (optional),
+#                   'LDAP_BIND_DN' (optional),
+#                   'LDAP_BIND_PASSWORD (optional)],
 # (IGNORANT is an optional argument. If you set it to 1, mutt_ldap_query
 # uses wildcards *foo* for searching).
+# (LDAP_BIND_DN and LDAP_BIND_PASSWORD are optional arguments. Leave them
+# out or empty to use and anonymous bind)
 # A practical illustrating example being:
 #  debian	=> ['db.debian.org', 'ou=users,dc=debian,dc=org',
 #                   'uid cn sn ircnick', 'uid cn sn ircnick',
@@ -71,5 +75,7 @@ $ldap_result_realname = '${cn} ${sn}';
 $ldap_result_comment = '(${ircnick})';
 # Don't use wildchars on searching
 $ignorant = 0;
-
+# Do an anonymous bind to the LDAP server:
+$ldap_bind_dn = '';
+$ldap_bind_password = '';
 1;
